# ExamReplica-AI

./: .gitignore  AI_CONTEXT.md  PROMPT_TEMPLATE.md  README.md  test_supabase.py
backend/: main.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt
backend/config/: __init__.py  settings.py  supabase_client.py
backend/examprofile_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/middleware/: auth.py  rate_limit.py
backend/models/: __init__.py  analytics.py  document.py  errors.py  generation.py  grading.py  professor_profile.py  regeneration.py  retrieval.py  submission.py  workspace.py
backend/routes/: __init__.py  analytics.py  documents.py  generation.py  health.py  profiles.py  regeneration.py  submissions.py  workspaces.py
backend/scripts/: query_chromadb.py  smoke_test.py  test_generation_e2e.py
backend/services/: __init__.py
backend/services/analytics/: models.py  service.py  snapshot.py
backend/services/document_processing/: __init__.py  chunking_service.py  embedding_service.py  parser_service.py
backend/services/documents/: __init__.py  document_service.py
backend/services/generation/: exceptions.py  models.py  pdf_export.py  pipeline.py  prompts.py  service.py
backend/tests/: test_analytics_service.py  test_auth.py  test_chunking.py  test_document_processing_service.py  test_generation_routes.py  test_generation_service.py  test_grading_models.py  test_grading_service.py  test_phase7_backend_hardening.py  test_profile_service.py  test_retrieval_service.py  test_submissions_api.py  test_vector_store.py
(+99 files in other folders)
