[project]
name = "examprofile-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "PyJWT>=2.9.0",
  "supabase>=2.6.0",
  "docling>=2.0.0",
  "chromadb>=1.0.12",
  "llama-index-core>=0.14.18",
  "llama-index-vector-stores-chroma>=0.5.5",
  "openai>=1.79.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [".."]
